RESOLVED FIXED147970
FilterOperation.h should not include FilterEffect.h
https://bugs.webkit.org/show_bug.cgi?id=147970
Summary FilterOperation.h should not include FilterEffect.h
Simon Fraser (smfr)
Reported 2015-08-12 23:15:38 PDT
FilterOperation.h should not include FilterEffect.h
Attachments
Patch (3.14 KB, patch)
2015-08-12 23:17 PDT, Simon Fraser (smfr)
dbates: review+
Simon Fraser (smfr)
Comment 1 2015-08-12 23:17:04 PDT
Alexey Proskuryakov
Comment 2 2015-08-13 00:02:49 PDT
iOS is red.
Daniel Bates
Comment 3 2015-08-13 09:31:39 PDT
Comment on attachment 258880 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=258880&action=review > Source/WebCore/platform/graphics/filters/FilterOperation.cpp:69 > +void ReferenceFilterOperation::setFilterEffect(PassRefPtr<FilterEffect> filterEffect) We should change PassRefPtr<> to RefPtr<>&&. This can be done in a separate bug.
Simon Fraser (smfr)
Comment 4 2015-08-13 16:16:20 PDT
Csaba Osztrogonác
Comment 5 2015-08-14 13:17:49 PDT
(In reply to comment #4) > http://trac.webkit.org/changeset/188389 It broke the EFL build.
Note You need to log in before you can comment on or make changes to this bug.