FilterOperation.h should not include FilterEffect.h https://bugs.webkit.org/show_bug.cgi?id=147970

Reviewed by Daniel Bates.

FilterEffect.h pulls in lots of JSC goop via runtime/Uint8ClampedArray.h,
so move its include to FilterOperation.cpp.

Causes include bloat because FilterOperation.h is pulled in via RenderStyle.h.

Source/WebCore:

* platform/graphics/filters/FilterOperation.cpp:
(WebCore::ReferenceFilterOperation::setFilterEffect):
* platform/graphics/filters/FilterOperation.h:
(WebCore::ReferenceFilterOperation::setFilterEffect): Deleted.

Source/WebKit2:

* UIProcess/ios/WebVideoFullscreenManagerProxy.h:

Canonical link: https://commits.webkit.org/166086@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188389 268f45cc-cd09-0410-ab3c-d52691b4dbfc