Source/WebKit2/UIProcess/ios/WebVideoFullscreenManagerProxy.h
@@ -32,6 +32,7 @@
 #include <WebCore/GraphicsLayer.h>
 #include <WebCore/WebVideoFullscreenInterfaceAVKit.h>
 #include <WebCore/WebVideoFullscreenModel.h>
+#include <wtf/HashMap.h>
 #include <wtf/PassRefPtr.h>
 #include <wtf/RefCounted.h>
 #include <wtf/RefPtr.h>
